# grpc-stream-merged-order-books

./: .gitlab-ci.yml  Cargo.toml  README.md
binance-client/: Cargo.toml  README.md  build.rs
binance-client/src/: main.rs  models.rs
bitstamp-client/: Cargo.toml  README.md
bitstamp-client/src/: main.rs  models.rs
client/: Cargo.toml
client/src/: main.rs  subscribe.rs  update.rs
proto/: ohlc_stream.proto  orderbook.proto
server/: Cargo.toml  build.rs
server/src/: main.rs  merge.rs  run.rs  self_update.rs
