[package]
name = "binance-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tracing = "*"
tracing-subscriber = "*"
structopt = "0.3"
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version="0.17", features = ["native-tls"]}
futures-util = "*"
tonic = { version = "0.7", features = ["tls"] }
prost = "0.10"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.1.0"
prettytable-rs = "*"

[build-dependencies]
tonic-build = "0.7"

