[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = { version = "0.7", features = ["tls"] }
prost = "0.10"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-stream = "0.1"
csv = "1"
prettytable-rs = "*"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.7"

